--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="css/honey.css">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -19,10 +20,10 @@
         <!--Mobile Navbar-->
         <ul class="navbar-nav text-center mobile-command">
             <li class="nav-item">
-                <button class="btn btn-outline-bear" type="button">Player</button>
+                <button class="btn btn-outline-bear" type="button" id="beargen1">Player</button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-outline-bear" type="button">GM</button>
+                <button class="btn btn-outline-bear" type="button" id="congen">GM</button>
             </li>
         </ul>
         
@@ -55,10 +56,10 @@
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
             <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item">
-                    <button class="btn btn-outline-bear" type="button">Build-A-Bear</button>
+                    <button class="btn btn-outline-bear" type="button" id="beargen2">Build-A-Bear</button>
                 </li>
                 <li class="nav-item">
-                    <button class="btn btn-outline-bear" type="button">Plan your Convention!</button>
+                    <button class="btn btn-outline-bear" type="button" id="congen">Plan your Convention!</button>
                 </li>
             </ul>
         </div>
@@ -84,8 +85,8 @@
                     </div>
                 </div>
 
-                <button class="btn btn-outline-heist" type="button">Build-A-Bear</button>
-                <button class="btn btn-outline-heist" type="button">Plan your Convention!</button>
+                <button class="btn btn-outline-heist" type="button" id="beargen3">Build-A-Bear</button>
+                <button class="btn btn-outline-heist" type="button" id="congen">Plan your Convention!</button>
             </div>
 
         <!--Mobile OnToggle-->
@@ -100,4 +101,37 @@
     </nav>
 
 </body>
+
+<div class="fullscreenbody">
+
+        <div class="card-deck mx-auto" id="bear-deck">
+                <div class="card">
+                  <img class="card-img-top" id="bear-desc-img" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title" id="bear-desc-title">Card title</h5>
+                    <p class="card-text" id="bear-desc-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" id="bear-species-img" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title" id="bear-species-title">Card title</h5>
+                    <p class="card-text" id="bear-species-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" id="bear-role-img" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title" id="bear-role-title">Card title</h5>
+                    <p class="card-text" id="bear-role-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  </div>
+                </div>
+              </div>
+
+
+    
+</div>
+
+
+<script src="js/honey.js"></script>
 </html>
